util_lib = static_library(
    'util',
    include_directories: inc,
    implicit_include_directories: false,
    sources: [
        'defs.h',
        'glue.h',
        'lib.h',
        'log.c',
        'log.h',
        'mem.c',
        'mem.h',
        'str.c',
        'str.h',
        'x86.c',
        'x86.h',
    ],
)
